--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -54,3 +54,4 @@ if (XBUILD_CONSORTIUM)
     add_subdirectory(xca_auth_test)
 endif()
 add_subdirectory(xstatistic_test)
+add_subdirectory(xtvm_test)
